--- a/src/inleiding.tex
+++ b/src/inleiding.tex
@@ -57,7 +57,7 @@ Het orginele document kan je vinden op github: \textit{https://github.com/Noedel
 De vragen en antwoorden van de oeven toetsen.
 \subsubsection{vragen}
 \paragraph{week 1}
-
+Ontbreekt :(
 \paragraph{week 2}
 \begin{enumerate}
     \item Suppose Host A wants to send a large file to Host B. The path from Host A to Host B passes through three links, of rates R1 = 4 Mbps, R2 = 2 Mbps, and R3 = 1 Mbps.
