--- a/src/main.tex
+++ b/src/main.tex
@@ -32,4 +32,5 @@
 	\include{hoofdstukken/vier}
 	\include{hoofdstukken/vijf}
 	\include{hoofdstukken/zes}
+	\include{hoofdstukken/acht}
 \end{document}
